@@ -4,6 +4,7 @@ Encoding=UTF-8
 MimeType=application/x-kig
 Icon=kig_doc
 Comment=Kig Figure
+Comment[af]=Kig-figuur
 Comment[ar]=شكل لكيج
 Comment[bg]=Фигура Kig
 Comment[bs]=Kig datoteka
@@ -17,6 +18,7 @@ Comment[es]=Figura de Kig
 Comment[et]=Kig-i kujund
 Comment[fi]=Kig-kuvio
 Comment[fr]=Figure Kig
+Comment[ga]=Léaráid Kig
 Comment[gl]=Figura de Kig
 Comment[hi]=के-इग रूप
 Comment[hr]=Kig figura
@@ -44,8 +46,8 @@ Comment[xh]=Kig Inani
 Comment[xx]=xxKig Figurexx
 Comment[zh_CN]=Kig 图形
 Type=MimeType
-Patterns=*.kig;
+Patterns=*.kig;*.kigz;
 X-KDE-AutoEmbed=false
 [Property::X-KDE-NativeExtension]
 Type=QString
-Value=.kig
+Value=.kig;*.kigz
