@@ -1,3 +1,8 @@
+2004-12-24  Pino Toscano <toscano.pino@tiscali.it>
+
+	* Kig can now save and open compressed files with extension
+	.kigz. This format is a gzip compressed tarball.
+
 2004-12-14  Pino Toscano <toscano.pino@tiscali.it>
 
 	* More tooltips and "what's this" to some dialog.
